# projectrust

./: Cargo.toml  t.sh
src/: main.rs
