[package]
name = "actix-web"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.4"
base58 = "0.2"
base64 = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-sdk = "1.16"
spl-token = "4.0"
spl-associated-token-account = "2.2"
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }
